--- a/redsocks/redsocks.conf
+++ b/redsocks/redsocks.conf
@@ -15,7 +15,7 @@ base {
 	// log = "syslog:local7";
 
 	// detach from console
-	daemon = off;
+	daemon = on;
 
 	/* Change uid, gid and root directory, these options require root
 	 * privilegies on startup.
