--- a/redsocks/redsocks.conf
+++ b/redsocks/redsocks.conf
@@ -39,12 +39,12 @@ redsocks {
 	local_ip = 192.168.8.1;
 	local_port = 1080;
 	type = shadowsocks;
-	ip = 119.28.17.148;
-	port = 8888;
+	ip = 11.1.1.1;
+	port = 8488;
 	timeout = 13;
 	autoproxy = 1;
 	login = aes-256-cfb;
-	password = woniusnail;
+	password = xxxxxx;
 }
 
 redudp {
