--- a/ap/dnsmasq.conf
+++ b/ap/dnsmasq.conf
@@ -64,8 +64,11 @@ resolv-file=/etc/resolv.dnsmasq.conf
 # Add other name servers here, with domain specs if they are for
 # non-public domains.
 #server=/localnet/192.168.0.1
-server=8.8.8.8
-server=8.8.4.4
+#server=8.8.8.8
+#server=8.8.4.4
+server=202.38.93.153
+server=202.141.162.123
+server=202.141.176.93
 
 # Example of routing PTR queries to nameservers: this will send all
 # address->name queries for 192.168.3/24 to nameserver 10.1.2.3
