--- a/ap/udhcpd.conf
+++ b/ap/udhcpd.conf
@@ -83,7 +83,7 @@ interface	wlan0		#default: eth0
 # lines. The only option with a default is 'lease'.
 
 #Examles
-opt	dns	192.168.8.1 8.8.8.8
+opt	dns	192.168.8.1
 option	subnet	255.255.255.0
 opt	router	192.168.8.1
 #opt	wins	192.168.10.10
