--- a/redsocks/redsocks.conf
+++ b/redsocks/redsocks.conf
@@ -1,93 +1,30 @@
 base {
-	// debug: connection progress & client list on SIGUSR1
 	log_debug = on;
-
-	// info: start and end of client session
 	log_info = on;
-
-	/* possible `log' values are:
-	 *   stderr
-	 *   "file:/path/to/file"
-	 *   syslog:FACILITY  facility is any of "daemon", "local0"..."local7"
-	 */
 	log = stderr;
 //	log = "file:/tmp/redsocks.log";
-	// log = "syslog:local7";
-
-	// detach from console
-	daemon = on;
-
-	/* Change uid, gid and root directory, these options require root
-	 * privilegies on startup.
-	 * Note, your chroot may requre /etc/localtime if you write log to syslog.
-	 * Log is opened before chroot & uid changing.
-	 */
-	// user = nobody;
-	// group = nobody;
-	// chroot = "/var/chroot";
-
-	/* possible `redirector' values are:
-	 *   iptables   - for Linux
-	 *   ipf        - for FreeBSD
-	 *   pf         - for OpenBSD
-	 *   generic    - some generic redirector that MAY work
-	 */
+	daemon = off;
 	redirector = iptables;
 }
 
 redsocks {
-	local_ip = 192.168.8.1;
-	local_port = 1080;
-	type = shadowsocks;
-	ip = 11.1.1.1;
-	port = 8488;
-	timeout = 13;
-	autoproxy = 1;
-	login = aes-256-cfb;
-	password = xxxxxx;
-}
+	local_ip = 0.0.0.0;
+	local_port = 1081;
+	ip = 127.0.0.1;
+	port = 1080;
+	type = socks5;
 
-redudp {
-	// `local_ip' should not be 0.0.0.0 as it's also used for outgoing
-	// packets that are sent as replies - and it should be fixed
-	// if we want NAT to work properly.
-	//local_ip = 127.0.0.1;
-	//local_port = 10053;
-
-	// `ip' and `port' of socks5 proxy server.
-	//ip = 10.0.0.1;
-	//port = 1080;
-	//login = username;
-	//password = pazzw0rd;
-
-	// kernel does not give us this information, so we have to duplicate it
-	// in both iptables rules and configuration file.  By the way, you can
-	// set `local_ip' to 127.45.67.89 if you need more than 65535 ports to
-	// forward ;-)
-	// This limitation may be relaxed in future versions using contrack-tools.
-	//dest_ip = 8.8.8.8;
-	//dest_port = 53;
-
-	//udp_timeout = 30;
-	//udp_timeout_stream = 180;
 }
 
 autoproxy {
-    no_quick_check_seconds = 60; // Directly relay traffic to proxy if an IP
-                                 // is found blocked in cache and it has been
-                                 // added into cache no earlier than this
-                                 // specified number of seconds.
-    quick_connect_timeout = 3;   // Timeout value when performing quick
-                                 // connection check if an IP is found blocked
-                                 // in cache.
+    no_quick_check_seconds = 60;
+    quick_connect_timeout = 3;
 }
 
 ipcache {
-    // Configure IP cache
-    cache_size = 4;   // Maximum number of IP's in 1K. 
-    stale_time = 900; // Seconds to stale an IP in cache since it is added
-                      // into cahce
-    port_check = 1;   // Whether to distinguish port number in address
+    cache_size = 4;
+    stale_time = 900;
+    port_check = 1;
 }
 
 
