--- a/supervisor/conf.d/ss.ini
+++ b/supervisor/conf.d/ss.ini
@@ -7,7 +7,7 @@ stdout_logfile_maxbytes=2MB
 stdout_logfile_backups=1
 
 [program:ss-tunnel-01]
-command=ss-tunnel -c /etc/ss/ss-tunnel.json -l 1053 -L 8.8.8.8:53 -u -vvv
+command=ss-tunnel -c /etc/ss/ss.json -l 1053 -L 8.8.8.8:53 -u -vvv
 startsecs=10
 redirect_stderr=true
 stdout_logfile=/tmp/ss-tunnel-01.log
@@ -15,7 +15,7 @@ stdout_logfile_maxbytes=2MB
 stdout_logfile_backups=1
 
 [program:ss-tunnel-02]
-command=ss-tunnel -c /etc/ss/ss-tunnel.json -l 1054 -L 8.8.8.8:53 -u -vvv
+command=ss-tunnel -c /etc/ss/ss.json -l 1054 -L 8.8.8.8:53 -u -vvv
 startsecs=10
 redirect_stderr=true
 stdout_logfile=/tmp/ss-tunnel-02.log
@@ -23,7 +23,7 @@ stdout_logfile_maxbytes=2MB
 stdout_logfile_backups=1
 
 [program:ss-tunnel-03]
-command=ss-tunnel -c /etc/ss/ss-tunnel.json -l 1055 -L 8.8.8.8:53 -u -vvv
+command=ss-tunnel -c /etc/ss/ss.json -l 1055 -L 8.8.8.8:53 -u -vvv
 startsecs=10
 redirect_stderr=true
 stdout_logfile=/tmp/ss-tunnel-03.log
