--- a/supervisor/conf.d/nat.ini
+++ b/supervisor/conf.d/nat.ini
@@ -1,6 +1,6 @@
 [program:nat-reset]
 directory=/root/src/arm/iptables
-command=/root/src/arm/iptables/reset.sh
+command=%(directory)/reset.sh
 autostart=false
 startsecs=1
 startretries=0
@@ -11,7 +11,7 @@ stdout_logfile_backups=1
 
 [program:nat-ap]
 directory=/root/src/arm/iptables
-command=/root/src/arm/iptables/rules/ap.sh
+command=%(directory)/rules/ap.sh
 autostart=false
 startsecs=1
 startretries=0
@@ -22,7 +22,7 @@ stdout_logfile_backups=1
 
 [program:nat-ss]
 directory=/root/src/arm/iptables
-command=/root/src/arm/iptables/rules/ss-nat.sh install
+command=%(directory)/rules/ss-nat.sh install
 autostart=false
 startsecs=1
 startretries=0
@@ -33,7 +33,7 @@ stdout_logfile_backups=1
 
 [program:nat-ss-remove]
 directory=/root/src/arm/iptables
-command=/root/src/arm/iptables/rules/ss-nat.sh remove
+command=%(directory)/rules/ss-nat.sh remove
 autostart=false
 startsecs=1
 startretries=0
