--- a/supervisor/conf.d/ap.ini
+++ b/supervisor/conf.d/ap.ini
@@ -1,5 +1,5 @@
 [program:ap-daemon]
-command=/etc/ap-daemon.sh
+command=/root/src/arm/ap/ap_keep_by_scan.sh
 startsecs=10
 redirect_stderr=true
 stdout_logfile=/tmp/ap-daemon.log
