--- a/ap/dnsmasq.conf
+++ b/ap/dnsmasq.conf
@@ -66,9 +66,7 @@ resolv-file=/etc/resolv.dnsmasq.conf
 #server=/localnet/192.168.0.1
 #server=8.8.8.8
 #server=8.8.4.4
-server=202.38.93.153
-server=202.141.162.123
-server=202.141.176.93
+
 
 # Example of routing PTR queries to nameservers: this will send all
 # address->name queries for 192.168.3/24 to nameserver 10.1.2.3
@@ -108,12 +106,12 @@ server=202.141.176.93
 # specified interfaces (and the loopback) give the name of the
 # interface (eg eth0) here.
 # Repeat the line for more than one interface.
-interface=wlan0
+#interface=wlan0
 # Or you can specify which interface _not_ to listen on
 #except-interface=
 # Or which to listen on by address (remember to include 127.0.0.1 if
 # you use this.)
-listen-address=192.168.8.1,127.0.0.1
+#listen-address=192.168.8.1,127.0.0.1
 # If you want dnsmasq to provide only DNS service on an interface,
 # configure it as shown above, and then use the following line to
 # disable DHCP and TFTP on it.
