--- a/supervisor/conf.d/pen.ini
+++ b/supervisor/conf.d/pen.ini
@@ -1,5 +1,5 @@
 [program:dns-proxy]
-command=pen -dfrU -S 3 20000 127.0.0.1:1053 127.0.0.1:1054 127.0.0.1:1055
+command=pen -dsfrU -S 3 20000 127.0.0.1:1053 127.0.0.1:1054 127.0.0.1:1055
 startsecs=2
 startretries=100
 redirect_stderr=true
